--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.6.0",
     "cryptocompare": "^1.0.0",
     "dotenv": "^8.2.0",
+    "fuzzy": "^0.1.3",
+    "fuzzy-search": "^3.2.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
