--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fuzzy": "^0.1.3",
     "fuzzy-search": "^3.2.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-highcharts": "^16.1.0",
